[FIX] 행사 조회 Redis 캐싱 문제 해결 (#239)
* fix: 행사 Redis 캐시 직렬화 오류 수정

* chore: 행사 테스트 삭제